styles.css
body {
  height: 200px;
  width: 450px;
  font-family: "Poppins", sans-serif;
}

.main-container {
  color: white;
  position: fixed;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  background-color: rgb(20, 20, 20);
  background-image: url("https://www.transparenttextures.com/patterns/inspiration-geometry.png");
  text-align: center;
  box-shadow: inset 0 0 4px 3px rgb(71, 71, 71);
}

.top-bar {
  display: flex;
  justify-content: space-between;
  padding: 5vh 5vw;
  height: 12vh;
  line-height: 12vh;
  margin-top: 4vh;
}

.navbar {
  width: 30vw;
  height: 15vh;
  padding: 1px;
  background-color: rgb(90, 90, 90);
  border-radius: 20px;
  color: rgb(235, 235, 235);
  background-image: url("https://www.transparenttextures.com/patterns/black-linen.png");
}

.header {
  font-size: 1.45rem;
  font-weight: 800;
  margin: auto;
  margin-top: 1.8vh;
  user-select: none;
}

.side-container {
  background-color: rgb(46, 46, 46);
  border-radius: 10px;
  width: 15vw;
  box-shadow: inset 0 0 1px 2px rgb(0, 0, 0);
  font-size: 0.5rem;
  border: rgb(102, 102, 102) solid 2px;
  height: 12vh;
  user-select: none;
}

li {
  list-style-type: none;
}

a {
  text-decoration: none;
  font-weight: 600;
  color: rgb(200, 200, 200);
}

#question {
  font-size: 0.8rem;
  font-weight: 400;
  word-wrap: break-word;
  padding: 0px 4px;
  display: inline-block;
  margin: auto 0;
  margin-top: 7.5px;
  max-width: 75vw;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#date {
  margin: 0;
}

#time {
  margin: 0;
}

.btn-text {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 1rem;
  margin: 0;
  padding: 0;
}

.q-container {
  background-color: rgb(80, 80, 80);
  background-image: url("https://www.transparenttextures.com/patterns/black-linen.png");
  height: 14vh;
  border-radius: 20px;
  width: 90vw;
  position: relative;
  margin: 0 auto;
  padding: 8px;
  margin-top: 4vh;
  box-shadow: inset 0 0 6px 2px rgb(0, 0, 0);
  word-wrap: break-word;
}

.bt-container {
  margin-top: 6vh;
}

.timer-container {
  margin-top: 4vh;
  color: rgb(190, 190, 190);
  font-size: 0.7rem;
  font-weight: 600;
  user-select: none;
  transition: all 0.5s ease-in-out;
}

.footer {
  font-size: 0.75rem;
  color: rgb(230, 230, 230);
  margin-top: 3vh;
  display: flex;
}
.footer-box {
  flex: 1;
  display: flex;
  justify-content: center;
}

.footer-box:first-child > span {
  margin-right: auto;
  margin-left: 15px;
}
.footer-box:last-child > span {
  margin-left: auto;
  margin-right: 15px;
}

.carousel-link {
  cursor: pointer;
}

.carousel-link:hover {
  color: white;
}

.liked-footer {
  justify-content: left;
  margin-left: 15px;
  margin-top: 1.2vh;
}

.contests-footer {
  justify-content: right;
  margin-right: 15px;
  margin-top: 1.2vh;
}

.secondary-container {
  background-color: rgb(80, 80, 80);
  background-image: url("https://www.transparenttextures.com/patterns/black-linen.png");
  height: 37.4vh;
  border-radius: 20px;
  width: 90vw;
  position: relative;
  margin: 0 auto;
  padding: 10px;
  margin-top: 1vh;
  box-shadow: inset 0 0 6px 2px rgb(0, 0, 0);
  word-wrap: break-word;
  line-height: 10vh;
}

.secondary-header {
  font-size: 0.82rem;
  margin-top: 3vh;
  text-align: center;
  font-weight: 700;
}

.secondary-text-container {
  height: 37.4vh;
  overflow-y: scroll;
}

.secondary-text-container::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  background-color: #555;
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

.secondary-text-container::-webkit-scrollbar {
  width: 6px;
  background-color: #555;
  border-radius: 10px;
}

.secondary-text-container::-webkit-scrollbar-thumb {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: #8d8d8d;
}

.gh-container {
  margin-top: 2px;
}

#gt-icon {
  color: white;
  text-decoration: none;
}

#preloader {
  display: flex;
  justify-content: center;
  position: fixed;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  background: rgb(14, 14, 14);
  z-index: 100;
}

#loadgif {
  display: block;
  margin: auto;
}

.fade-out {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 500ms, opacity 500ms ease-in;
}

.fade-out-fast {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 400ms, opacity 400ms ease-in;
}

.btn {
  width: 18vw;
  height: 15vh;
  color: #fff;
  background: black;
  cursor: pointer;
  position: relative;
  border-radius: 10px;
  border: rgb(207, 207, 207) groove 2px;
}

.zoom {
  transition: transform 0.3s;
}

.zoom:hover {
  transform: scale(1.12);
}

.tooltiptext {
  visibility: hidden;
  background-color: rgb(70, 70, 70);
  color: white;
  text-align: center;
  border-radius: 10px;
  padding: 2%;
  position: absolute;
  z-index: 1;
  width: 250px;
  top: 100%;
  left: 50%;
  margin-left: -130px;
  opacity: 0;
  transition: opacity 0.3s;
  border: 1px solid black;
  line-height: 6.5vh;
  overflow: hidden;
  max-height: 40vh;
  word-wrap: break-word;
}

#question-topic {
  color: rgb(190, 190, 190);
  font-weight: 600;
  font-size: 0.8rem;
}

.tap-icon {
  opacity: 90%;
  height: 25px;
  width: 25px !important;
  position: relative;
  top: 2px;
  margin-right: 8px;
  cursor: pointer;
  animation: heartbeat 2s infinite;
  animation-delay: 1s;
  float: right;
}

.tap-icon:hover ~ .tooltiptext {
  visibility: visible;
  opacity: 1;
}

.tap-icon:hover {
  animation: none;
}

.like-icon {
  position: relative;
  float: right;
  top: 5.5px;
  height: 18px;
  width: 19px !important;
  cursor: pointer;
  margin-right: 8px;
}

@keyframes heartbeat {
  0% {
    transform: scale(1);
  }
  10% {
    transform: scale(1.1);
  }
  20% {
    transform: scale(1);
  }
  30% {
    transform: scale(1.1);
  }
  40% {
    transform: scale(1);
  }
  100% {
    transform: scale(1);
  }
}

.carousel {
  width: 450px;
}

.carousel-cell {
  width: 100%;
  cursor: default;
}

